--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-scripts": "4.0.1"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts --max_old_space_size=4096 start"
   },
   "eslintConfig": {
     "extends": [
